<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             tools:context=".InformacionProyectoFragment" android:background="@color/colorPaleta5">

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:text="@string/txt_tv_id_proyecto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView7"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp" android:textColor="@color/colorPaleta4"/>
            <TextView
                    android:text="@string/txt_tv_id_numero"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/tvIdProyecto"
                    app:layout_constraintStart_toEndOf="@+id/textView7"
                    android:layout_marginStart="8dp" android:layout_marginTop="16dp"
                    app:layout_constraintTop_toTopOf="parent" android:textColor="@color/colorPaleta4"/>
            <TextView
                    android:text="@string/txt_tv_plataforma_proyecto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/tvTipoProyecto"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/tvNombreProyecto"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="156dp" android:textColor="@color/colorPaleta4"/>
            <TextView
                    android:text="$"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView11"
                    android:layout_marginTop="76dp"
                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toEndOf="@+id/tvTipoProyecto"
                    android:layout_marginStart="96dp" android:textColor="@color/colorPaleta2"/>
            <TextView
                    android:text="@string/txt_tv_pago_proyecto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/tvPagoPorBug"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="40dp" android:layout_marginTop="76dp"
                    app:layout_constraintTop_toTopOf="parent" android:textColor="@color/colorPaleta2"
                    app:layout_constraintStart_toEndOf="@+id/textView11" android:layout_marginStart="8dp"
                    app:layout_constraintHorizontal_bias="1.0"/>
            <ImageView
                    android:src="@drawable/linea_divisora"
                    android:layout_width="405dp"
                    android:layout_height="15dp"
                    android:id="@+id/imageView3" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/tvTipoProyecto"/>
            <TextView
                    android:text="@string/txt_tv_caracteristicas_a_probar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView13"
                    android:layout_marginTop="12dp"
                    app:layout_constraintTop_toBottomOf="@+id/imageView3" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp" android:textColor="@color/colorPaleta4"/>
            <TextView
                    android:text="@string/txt_tv_informacion_caracteristicas_a_probar"
                    android:layout_width="267dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvCaracteristicasProyecto" android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView13" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="44dp" android:textColor="@color/colorPaleta3"/>
            <ImageView
                    android:src="@drawable/linea_divisora"
                    android:layout_width="409dp"
                    android:layout_height="20dp"
                    android:id="@+id/imageView6" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.785"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/tvCaracteristicasProyecto"/>
            <TextView
                    android:text="@string/txt_tv_enlace_codigo_proyecto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView17" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/imageView6" android:textColor="@color/colorPaleta4"/>
            <TextView
                    android:text="@string/txt_tv_codigo_proyecto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvEnlaceProyecto"
                    android:textColor="@color/colorPaleta3"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView17"
                    android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.15"/>
            <ImageView
                    android:src="@drawable/linea_divisora"
                    android:layout_width="398dp"
                    android:layout_height="17dp"
                    android:id="@+id/imageView7" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/tvEnlaceProyecto"/>
            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnAceptarProyecto"
                    android:background="@drawable/boton_aceptar_proyecto_texto"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="64dp" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/imageView7"/>
            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnRechazarProyecto"
                    android:background="@drawable/boton_rechazarproyecto_texto"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="64dp" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/imageView7"/>
            <TextView
                    android:text="@string/txt_tv_tipo_proyecto"
                    android:layout_width="wrap_content"
                    android:layout_height="18dp"
                    android:id="@+id/tvNombreProyecto"
                    android:textColor="@color/colorPaleta3"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView7" android:layout_marginStart="156dp"
                    app:layout_constraintStart_toStartOf="parent"/>
            <TextView
                    android:text="@string/txt_tv_nombre_proyecto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView6" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="32dp" android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView7" android:textColor="@color/colorPaleta1"/>
            <TextView
                    android:text="@string/txt_tipo_proyecto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView10"
                    android:textColor="@color/colorPaleta1" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="56dp" android:layout_marginTop="4dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView6"/>
            <TextView
                    android:text="@string/txt_pago_bug"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView14"
                    android:textColor="@color/colorPaleta1" android:layout_marginTop="56dp"
                    app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="12dp"
                    app:layout_constraintEnd_toEndOf="parent"/>

        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</FrameLayout>